  * Fix some memory leaks in the Vorbis decoder and video overlays.
  * Fix a problem with the goom plugin which could cause it to stop working.
  * Clean up "%" unescaping in MRLs; correctly handle "%" in DVD MRLs.
  * Fix a crash with "dvb:/".
  * DVB subtitle fixes: deadlock prevention, thread leakage, spec compliance.
  * Allow the DVB input plugin to timeout if it is receiving no signal.

xine-lib (1.1.7)
  * Support libdca (new name for libdts) by shuffling around the dts.h file.
  * Add support for MDHD version 1 atom in demux_qt. [bug #1679398]
  * Handle single-quoted attribute values in XML.
  * Fix default paths for RealPlayer libraries (broken in 1.1.5).
    [Bug 1707526]
  * Fix proxy usage when the hostnames cannot be resolved. Thanks to Jeff
    Mitchell for reporting and testing the fix.
  * Avoid zero-sized frames when demuxing MPEG PES.
  * Improved MPEG2 detection and optimised processing.
  * Extract AFD information (commonly used in UK DVB-T) from the MPEG stream.
  * Ensure that the ffmpeg video image size is properly initialised.
  * Allow XxMC to switch back to software decoding; don't deinterlace if it's
    not needed for any given frame.
  * Document "dvba:" MRLs (ATSC with full tuning info).
  * Fix VCD playback (broken since 1.1.4).
  * Fix demuxing of FLAC files with ID3v2 tags.
  * Use the integer versions of Speex decoding functions, this avoids an
    iteration over the decoded frames to transform them to integers, and
    also avoids an improper saturation.
  * Prioritize the musepack demuxer over mpgaudio, as sometimes the latter can
    misfire and report a good file as unplayable.
  * Fix an mmap problem with huge files on 32-bit systems.
  * Improved MPEG PES stream handling: specifically, misdetection of data
    streams as PES streams.
  * Handle unplugged ALSA device (fixes crashes) and if the frontend does not
    handle the event continue playback to the none output.